[project]
name = "gusa_custom"
version = "0.1.0"
description = "GUSA Vietnam operations customizations for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GUSA Vietnam" }
]
dependencies = []

[tool.setuptools.packages.find]
include = ["gusa_custom*"]

[tool.setuptools]
include-package-data = true

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
